--- a/app/src/main/res/layout/activity_imc.xml
+++ b/app/src/main/res/layout/activity_imc.xml
@@ -1,48 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    tools:context=".ImcActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="40dp"
-        android:text="@string/imc_desc" />
-
-    <EditText
-        android:id="@+id/edit_imc_weight"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="40dp"
-        android:hint="@string/weight"
-        android:inputType="number"
-        android:maxLength="3" />
-
-    <EditText
-        android:id="@+id/edit_imc_height"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="40dp"
-        android:hint="@string/height"
-        android:inputType="number"
-        android:maxLength="3" />
-
-    <Button
-        android:id="@+id/btn_imc_send"
-        android:text="@string/calc"
-        android:backgroundTint="@color/black"
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:context=".ImcActivity">
 
-</LinearLayout>
+        <TextView
+            style="@style/TextViewForm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/imc_desc" />
+
+        <EditText
+            android:id="@+id/edit_imc_weight"
+            style="@style/EditTextForm"
+            android:hint="@string/weight" />
+
+        <EditText
+            android:id="@+id/edit_imc_height"
+            style="@style/EditTextForm"
+            android:hint="@string/height" />
+
+        <Button
+            android:id="@+id/btn_imc_send"
+            style="@style/ButtonForm"
+            android:text="@string/calc" />
+
+    </LinearLayout>
+
+</ScrollView>
