--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,34 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-   <LinearLayout
-<<<<<<< HEAD
-=======
-       android:id="@+id/btn_imc"
->>>>>>> 3bc6c8e (Fitness Track)
-       android:background="@color/colorLightGray"
-       android:paddingTop="10dp"
-       android:paddingBottom="12dp"
-       android:paddingStart="12dp"
-       android:paddingEnd="12dp"
-       android:layout_width="wrap_content"
-       android:orientation="vertical"
-       android:layout_height="wrap_content">
+    <LinearLayout
+        android:id="@+id/btn_imc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorLightGray"
+        android:orientation="vertical"
+        android:paddingStart="12dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="12dp"
+        android:paddingBottom="12dp">
 
-   <ImageView
-       android:src="@drawable/ic_baseline_wb_sunny_24"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_wb_sunny_24" />
 
-     <TextView
-         android:text="@string/label_imc"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"/>
-   </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_imc" />
+    </LinearLayout>
 
 </LinearLayout>
