--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,14 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/main_item"
+        tools:itemCount="5"/>
+</LinearLayout>
+ <!--   <LinearLayout
         android:id="@+id/btn_imc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,4 +36,3 @@
             android:text="@string/label_imc" />
     </LinearLayout>
 
-</LinearLayout>
